--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?9730030');
-  src: url('../font/fontello.eot?9730030#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?9730030') format('woff'),
-       url('../font/fontello.ttf?9730030') format('truetype'),
-       url('../font/fontello.svg?9730030#fontello') format('svg');
+  src: url('../font/fontello.eot?90809424');
+  src: url('../font/fontello.eot?90809424#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?90809424') format('woff'),
+       url('../font/fontello.ttf?90809424') format('truetype'),
+       url('../font/fontello.svg?90809424#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?9730030#fontello') format('svg');
+    src: url('../font/fontello.svg?90809424#fontello') format('svg');
   }
 }
 */
@@ -56,3 +56,4 @@
 .icon-calendar:before { content: '\e803'; } /* '' */
 .icon-cube:before { content: '\e804'; } /* '' */
 .icon-chat-empty:before { content: '\e805'; } /* '' */
+.icon-link-ext-alt:before { content: '\e806'; } /* '' */
